--- a/perfil_professores.html
+++ b/perfil_professores.html
@@ -1,1 +1,27 @@
-
+<html>
+	<head>
+		<title>Perfil de Professores</title>
+		<link rel="stylesheet" href="style_prof.css">
+		 <script type="text/javascript" src="altera_perfil.js"></script>
+	</head>
+	<body>
+		<nav id='menu'>
+			<ul>
+				<li><a href='../Site/Aula31-03.html'>Home</a></li>
+				<li><a href="../Site/Estudantes.html">Alunos</a></li>
+				<li><a href='../Site/Professores.html'>Professor</a></li>
+				<li><a href=''>Entrar</a></li>
+			</ul>
+		</nav>
+    <nav class='menu-lateral'>
+      <form class='botoes'>
+        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
+        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
+        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
+        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
+        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
+        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
+      </form>
+    </nav>
+  </body>
+</html>
