--- a/perfil_professores.html
+++ b/perfil_professores.html
@@ -15,13 +15,30 @@
 		</nav>
     <nav class='menu-lateral'>
       <form class='botoes'>
-        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
-        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
-        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
-        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
-        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
-        <button type='button' id='perfil-Jonatas'>Prof.Jonatas</button>
+             <button type='button' id='perfil-Jonatas'> Prof. Jonatas </button>
+             <button type='button' id='perfil-Edilene'> Prof. Edilene </button>
+             <button type='button' id='perfil-Sirlene'> Prof. Sirlene </button>
+             <button type='button' id='perfil-Marcia'> Prof. Marcia </button>
+             <button type='button' id='perfil-Josafat'> Prof. Josafat </button>
+             <button type='button' id='perfil-Sandra'> Prof. Sandra </button>
+             <button type='button' id='perfil-Edivaldo'> Prof. Edivaldo </button>
+             <button type='button' id='perfil-Joaquina'> Prof. Joaquina </button>
+             <button type='button' id='perfil-Rosilda'> Prof. Rosilda </button>
       </form>
     </nav>
+	<div class='perfil'>
+	 <h1 id='nome'>Nome Professor</h1>
+	   <img id='foto-pefil' class='foto-perfil' src='../projetofinal/perfil-vazio.png'>
+	<h4 id='data_nasc'>Data de Nascimento></h4>
+        <h4 id='data_nasc'>Matéria></h4>
+	<h4 id='data_nasc'>Tempo de Atividade></h4>
+	<h4 id='data_nasc'>Graduação></h4>
+	   <img class='chapa-parcas' src='../projetofinal/perfil-grupo.jpg'>
+	<h4 id='bordao'>Bordão</h4>
+		<div> class='rede-social'>
+		  <img class='facebook' src ='../projetofinal/facebook.png'>
+		  <img class='instagram' src ='../projetofinal/instagram.png'>
+		</div>
+	</div>
   </body>
 </html>
